2006-07-26  Brandon Hale  <brandon@ubuntu.com>

	* src/PlayerWindow.cs: Add basic keyboard support.
	L: Love Track, H: Hate Track, N: Next, Escape: Hide to Tray.

2006-07-26  Iain Holmes  <iain@gnome.org>

	* src/PlayerWindow.cs:
	  data/glade/PlayerWindow.glade: Add tooltips, patch by Peter Oliver

2006-07-26  Iain Holmes  <iain@gnome.org>

	* src/MagicCoverImage.cs: Add a cover changed handler
	  src/PlayerWindow.cs: Don't allow the window to be resized vertically
	  	Patch from Tom Parker.

2006-07-26  Iain Holmes  <iain@gnome.org>

	* data/lastfm.schemas: Patch to fix typo by Arif Lukito

2006-07-26  Iain Holmes  <iain@gnome.org>

	* src/FindStation.cs: Set . as the number separator. Patch from
	  Damien Collard

2006-07-26  Iain Holmes  <iain@gnome.org>

	* liblastexit/lastexit.xml:
	  liblastexit/lastexit-dbus.[ch]: D-Bus patch from Baris Cicek.

	* liblastexit/Makefile.am: Build the D-Bus glue.

	* src/Driver.cs:
	  src/DBus.cs: Modified D-Bus patch from Baris Cicek.

2006-07-21  Iain Holmes  <iain@gnome.org>

	* src/FMConnection.cs: Support setting recommended radio

	* src/PlayerWindow.cs: Add recommended radio to the main list

2006-07-21  Iain Holmes  <iain@gnome.org>

	* src/TrayIcon.cs: Patch from Baris to add song image.

	* src/PlayerWindow.cs: Set the tooltip image from Baris.
	Reshow the password dialog on wrong password.
	
	* src/Config.cs: Have support for missing config values

	* src/FMConnection.cs: Support reporting bad password

2006-07-18  Ross Burton  <ross@burtonini.com>

	* liblast-exit/Makefile.am:
	Add -avoid-version to remove the .0.0.0 symlinks.

2006-07-11  Iain <iain@gnome.org>

	* src/NotificationArea.cs:
	  src/TrayIcon.cs: Patch from Baris Cicek to add a tray icon

2006-07-10  Iain <iain@gnome.org>

	* src/last-exit.in: Require bash, cos exec -a isn't POSIX and breaks
	things

2006-07-10  Iain <iain@gnome.org>

	* FindStation.cs: If Enter is pressed for user or fans of, don't crash

2006-07-09  Iain <iain@gnome.org>
