@@ -2,5 +2,6 @@
   <dllmap dll="libglib-2.0-0.dll" target="libglib-2.0.so.0"/>
   <dllmap dll="libgtk-2.0-0.dll" target="libgtk-x11-2.0.so.0"/>
   <dllmap dll="libgobject-2.0-0.dll" target="libgobject-2.0.so.0"/>
+  <dllmap dll="notify" target="libnotify.so.1"/>
   <dllmap dll="liblastexit" target="@pkglibdir@/liblastexit.so"/>
 </configuration>
